[gd_scene load_steps=10 format=3 uid="uid://dv6yheno2uweb"]

[ext_resource type="Texture2D" uid="uid://d38y51qdjpamb" path="res://assets/Custom Assets/lever.png" id="1_ckdu5"]
[ext_resource type="Script" path="res://scripts/lever.gd" id="1_ijmh2"]

[sub_resource type="Animation" id="Animation_p2o8c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_hxtmn"]
resource_name = "off"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_6bjna"]
resource_name = "on"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lkkmr"]
_data = {
"RESET": SubResource("Animation_p2o8c"),
"off": SubResource("Animation_hxtmn"),
"on": SubResource("Animation_6bjna")
}

[sub_resource type="Gradient" id="Gradient_spqn1"]
offsets = PackedFloat32Array(0, 0.701299)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8nrq4"]
gradient = SubResource("Gradient_spqn1")
width = 48
height = 48
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_hhyur"]
radius = 24.0

[node name="Lever" type="Node2D" groups=["lever"]]
script = ExtResource("1_ijmh2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ckdu5")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lkkmr")
}

[node name="ActivateLight" type="PointLight2D" parent="."]
color = Color(0.305882, 0.356863, 0.192157, 1)
texture = SubResource("GradientTexture2D_8nrq4")

[node name="Area2D" type="Area2D" parent="." groups=["lever_area"]]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_hhyur")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
